categories and custom js

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,93 +1,8 @@
 {
-  "footer-section": {
-    "type": "footer-section",
-    "blocks": {
-      "aed52450-1a79-404b-b253-d12ec543c4bd": {
-        "type": "menu_list",
-        "settings": {
-          "choose_menu": "footer"
-        }
-      },
-      "c74ff605-4863-438c-b1fe-5fa0f278c17e": {
-        "type": "menu_list",
-        "settings": {
-          "choose_menu": "footer-1"
-        }
-      },
-      "06165730-aa9c-48c0-8619-f22203785c52": {
-        "type": "menu_list",
-        "settings": {
-          "choose_menu": "footer-menu"
-        }
-      },
-      "1b8ddeb0-6d81-40a4-892d-d9ffa0d4f7b9": {
-        "type": "payment_icon",
-        "settings": {
-          "icon": "paypal",
-          "text": "Paypal"
-        }
-      },
-      "dd0dda82-8cc6-4f14-b736-87aa6124c782": {
-        "type": "payment_icon",
-        "settings": {
-          "icon": "visa",
-          "text": "Visa"
-        }
-      },
-      "c6863e80-c6d2-4d80-90f2-350763c24f00": {
-        "type": "payment_icon",
-        "settings": {
-          "icon": "mastercard",
-          "text": "Mastercard"
-        }
-      },
-      "0ce4ee2f-d0df-43ca-a502-4fe68f3134dd": {
-        "type": "payment_icon",
-        "settings": {
-          "icon": "cash_delivery",
-          "text": "Cash on delivery"
-        }
-      },
-      "8d9e6c6c-413b-42ff-b242-d1c981d2b2cb": {
-        "type": "text",
-        "settings": {
-          "text": "Terms & Conditions",
-          "link": ""
-        }
-      },
-      "8606b20a-8320-4f83-b0ed-66777b9bec77": {
-        "type": "text",
-        "settings": {
-          "text": "Privacy Policy",
-          "link": ""
-        }
-      },
-      "d24bf5bd-d580-4f98-9fd4-68eda320c15d": {
-        "type": "text",
-        "settings": {
-          "text": "About Us",
-          "link": ""
-        }
-      }
-    },
-    "block_order": [
-      "aed52450-1a79-404b-b253-d12ec543c4bd",
-      "c74ff605-4863-438c-b1fe-5fa0f278c17e",
-      "06165730-aa9c-48c0-8619-f22203785c52",
-      "1b8ddeb0-6d81-40a4-892d-d9ffa0d4f7b9",
-      "dd0dda82-8cc6-4f14-b736-87aa6124c782",
-      "c6863e80-c6d2-4d80-90f2-350763c24f00",
-      "0ce4ee2f-d0df-43ca-a502-4fe68f3134dd",
-      "8d9e6c6c-413b-42ff-b242-d1c981d2b2cb",
-      "8606b20a-8320-4f83-b0ed-66777b9bec77",
-      "d24bf5bd-d580-4f98-9fd4-68eda320c15d"
-    ],
-    "settings": {
-      "title": "24\/7 Support",
-      "text": "stylehive@support",
-      "url": "",
-      "contact": "+971 44532620",
-      "copy_right_text": "© 2023 StyleHive. All rights reserved"
+  "current": "Default",
+  "presets": {
+    "Default": {
+      
     }
   }
 }
